tests/valid/test_ref_06.wyal
type Point is ({int x, int y} self)

assert "assertion failed":
    forall(&Point p):
        if:
            0 == (*p).x
        then:
            0 == (*p).x

